# word-guess-rust

./: 1.app.js  Cargo.toml  LICENSE_MIT  README.md  app.js  app.wasm  index.html  package.json  style.scss  webpack.config.js
.github/workflows/: check.yml  deploy.yml  test.yml
src/: app.rs  dictionary.rs  game.rs  lib.rs
src/components/: github_banner.rs  mod.rs
