[package]
name = "word-guess-rust-yew-wasm"
version = "0.1.0"
authors = ["Trace Helms <tracehelms@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
getrandom = { version = "0.2.2", features = ["js"] }
log = "0.4"
rand = "0.8.0"
strum = "0.19"
strum_macros = "0.19"
serde = "1"
serde_derive = "1"
wasm-bindgen = "0.2.58"
wasm-logger = "0.2"
wee_alloc = { version = "0.4.4", optional = true }
yew = "0.17"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'KeyboardEvent',
]
